gc总结